--- a/env/development.env
+++ b/env/development.env
@@ -1,5 +1,5 @@
 port=3000
-database_ip=192.168.10
-database_port=3000
-database_username=varichet
-database_password=test
+database_url=mongodb://mongo
+database_database=test
+database_username=root
+database_password=root
