--- a/package.json
+++ b/package.json
@@ -12,15 +12,20 @@
   "author": "Jorane Emilien & Valentin Richet",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
+    "lodash.reduce": "^4.6.0",
     "mongoose": "^5.8.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.5.34",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.2",
