Major Update - Refactoring (using await instead of callback hell) - Added Upload System

--- a/env/development.env
+++ b/env/development.env
@@ -3,3 +3,6 @@ database_url=mongodb://mongo
 database_database=test
 database_username=root
 database_password=root
+jwt_secret=InstaFood_JOVA
+salt=$2b$10$uh6EeG.XmUPa7X0ps5caB.
+upload_directory=uploads
