--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.reduce": "^4.6.0",
     "mongoose": "^5.8.1",
+    "multer": "^1.4.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -27,6 +28,8 @@
     "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.5.34",
+    "@types/multer": "^1.4.2",
+    "@types/node": "^13.7.1",
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.2",
     "ts-node": "^8.5.4",
