--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "express-winston": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
     "lodash.reduce": "^4.6.0",
@@ -26,6 +27,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
+    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mongoose": "^5.5.34",
     "@types/multer": "^1.4.2",
